# wove

./: .gitignore  README.md  build_docs.sh  example_run_times.txt  install_example_deps.sh  install_test_deps.sh  newspecs-plan.md  newspecs.md  pyproject.toml  run_examples.sh  run_tests_and_log.sh  setup.cfg  test_debug_logs.txt  test_results.txt  verify.sh  verify_output.txt  wove.py
.github/workflows/: coverage.yml  docs-pages.yml  docs.yml  executor-adapters.yml  python-3-10.yml  python-3-11.yml  python-3-12.yml  python-3-13.yml  python-3-14.yml  python-3-14t.yml  python-3-8.yml  python-3-9.yml  release-testing.yml
docs/: conf.py  index.md
docs/_static/: wove-docs.css
docs/how-to/: advanced-remote-execution-environments.md  background-processing.md  debugging-introspection.md  dependent-task-mapping.md  error-handling.md  helper-functions.md  index.md  inheritable-weaves.md  local-task-mapping.md  merging-external-functions.md  patterns-for-production.md  remote-task-environments.md  task-mapping.md  task-quality-of-life.md  the-basics.md
docs/reference/: index.md
docs/reference/api/: wove.backend.md  wove.context.md  wove.environment.md  wove.helpers.md  wove.integrations.md  (+5 more)
docs/version-history/: 0.1.0.md  0.2.0.md  0.3.0.md  1.0.0.md  2.0.0.md
examples/: api_aggregator.py  benchmark.py  chained_mapping.py  debug_example.py  dependent_mapped_tasks.py  dynamic_workflow.py  error_handling.py  etl_pipeline.py  example.py  file_processor.py  ml_pipeline.py
examples/sample_data/: file_1.txt  file_2.txt  file_3.txt
tests/: test_backend.py  test_background.py  test_background_unit.py  test_core.py  test_coverage.py  test_data_injection.py  test_debug.py  test_detached.py  test_dispatch_feature.py  test_environment_runtime.py  test_environment_unit.py  test_exceptions.py  test_executor.py  test_gateway.py  test_helpers.py  test_inheritable_weaves.py  test_integrations.py  test_mapping.py  test_merge.py  test_network_executors.py  test_parameters.py  test_remote.py  test_runtime_config.py  test_stdio_worker.py  test_sync.py  test_weave.py
wove/: __init__.py  api.py  backend.py  backend_worker.py  background.py  context.py  decorator.py  detached.py  environment.py  errors.py  executor.py  gateway.py  helpers.py  remote.py  remote_worker.py  result.py  runtime.py  security.py  serialization.py  stdio_worker.py  task.py  vars.py  weave.py
wove/integrations/: __init__.py  arq.py  aws_batch.py  base.py  celery.py  dask.py  kubernetes_jobs.py  ray.py  rq.py  slurm.py  taskiq.py  temporal.py  worker.py
(+31 files in other folders)
