[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "wove"
version = "1.0.0"
authors = [
  { name="curvedinf" },
]
description = "Beautiful python async orchestration"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cloudpickle",
]
[project.urls]
"Homepage" = "https://github.com/curvedinf/wove"
"Bug Tracker" = "https://github.com/curvedinf/wove/issues"
[project.optional-dependencies]
dev = [
    "pytest-asyncio",
    "ruff",
    "pytest-cov",
]
docs = [
    "sphinx>=8.0",
    "myst-parser>=4.0",
    "shibuya>=2025.9.25; python_version >= '3.10'",
]
dev-executors = [
    "celery",
    "temporalio",
    "ray",
    "rq",
    "taskiq",
    "arq",
    "dask[distributed]",
    "kubernetes",
    "boto3",
    "pyslurm; platform_system == 'Linux'",
]
examples = [
    "httpx",
    "numpy",
    "requests",
]
